--- a/infra/k8s/auth-depl.yaml
+++ b/infra/k8s/auth-depl.yaml
@@ -14,7 +14,8 @@ spec:
     spec:
       containers:
         - name: auth
-          image: mschregardus/auth
+#          image: mschregardus/auth
+          image: us.gcr.io/marc-ticketing-dev/auth
 ---
 apiVersion: v1
 kind: Service
