--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -1,14 +1,18 @@
-apiVersion: skaffold/v2alpha3
+apiVersion: skaffold/v2beta3
 kind: Config
 deploy:
   kubectl:
     manifests:
       - ./infra/k8s/*
 build:
-  local:
-    push: false
+  # Can only be local or googleCloudBuild
+#  local:
+#    push: false
+  googleCloudBuild:
+    projectId: marc-ticketing-dev
   artifacts:
-    - image: mschregardus/auth
+#    - image: mschregardus/auth
+    - image: us.gcr.io/marc-ticketing-dev/auth
       context: auth
       docker:
         dockerfile: Dockerfile
