--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -20,3 +20,11 @@ build:
         manual:
           - src: 'src/**/*.ts'
             dest: .
+    - image: mschregardus/client
+      context: client
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: '**/*.js'
+            dest: .
