Basic setup for the tickets microservice

--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -28,3 +28,11 @@ build:
         manual:
           - src: '**/*.js'
             dest: .
+    - image: mschregardus/tickets
+      context: tickets
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: 'src/**/*.ts'
+            dest: .
