--- a/infra/k8s/tickets-deply.yaml
+++ b/infra/k8s/tickets-deply.yaml
@@ -17,6 +17,14 @@ spec:
           image: mschregardus/tickets
 #          image: us.gcr.io/marc-ticketing-dev/tickets
           env:
+            - name: NATS_CLUSTER_ID
+              value: 'ticketing'
+            - name: NATS_CLIENT_ID
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.name
+            - name: NATS_URL
+              value: 'http://nats-srv:4222'
             - name: MONGO_URI
               value: 'mongodb://tickets-mongo-srv:27017/tickets'
             - name: JWT_KEY
@@ -24,6 +32,7 @@ spec:
                 secretKeyRef:
                   name: jwt-secret
                   key: JWT_KEY
+
 ---
 apiVersion: v1
 kind: Service
