Initial expiration setup

--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -44,3 +44,11 @@ build:
         manual:
           - src: 'src/**/*.ts'
             dest: .
+    - image: mschregardus/expiration
+      context: expiration
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: 'src/**/*.ts'
+            dest: .
