--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -52,3 +52,11 @@ build:
         manual:
           - src: 'src/**/*.ts'
             dest: .
+    - image: mschregardus/payments
+      context: payments
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: 'src/**/*.ts'
+            dest: .
