--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -4,6 +4,7 @@ deploy:
   kubectl:
     manifests:
       - ./infra/k8s/*
+      - ./infra/k8s-dev/*
 build:
   # Can only be local or googleCloudBuild
   local:
